# mcp-chat-analysis-server

./: .env.example  .gitignore  LICENSE  README.md  config.example.yml  pyproject.toml
docs/: ARCHITECTURE.md  CONTRIBUTING.md
examples/: claude_desktop_config.example.json
src/mcp_chat_analysis/: embeddings.py  models.py  processors.py  server.py
tests/: test_embeddings.py  test_server.py
